feat: add pagination in getAll